Bug 142537 - PPTX export placeholder modifycations are disappears
Summary: PPTX export placeholder modifycations are disappears
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Attila Bakos (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords: bibisectRequest, filter:pptx, regression
Depends on:
Blocks:
 
Reported: 2021-05-28 09:36 UTC by NISZ LibreOffice Team
Modified: 2021-06-08 09:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document from Impress (12.49 KB, application/vnd.oasis.opendocument.presentation)
2021-05-31 08:28 UTC, NISZ LibreOffice Team
Details
The original document saved by Impress (21.78 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-05-31 08:28 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (74.85 KB, image/png)
2021-05-31 08:35 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-28 09:36:52 UTC
Description:
After saving and reloading a PPTX document with placeholders it will disappears

Steps to Reproduce:
1. Create a new impress presentation
2. Insert 2 slides
3. One slide is a title slide, the other title + content
4. Don't write anything in the empty placeholders (text boxes), just colorize your line effect.
5. Save to pptx and reload


Actual Results:
Colors lines etc are not saved.

Expected Results:
Colors lines etc should be saved


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 44b914b1e2616ca8f70e896e653a46ca93610234
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 1 NISZ LibreOffice Team 2021-05-31 08:28:00 UTC
Created attachment 172476 [details]
Example document from Impress
Comment 2 NISZ LibreOffice Team 2021-05-31 08:28:29 UTC
Created attachment 172477 [details]
The original document saved by Impress
Comment 3 NISZ LibreOffice Team 2021-05-31 08:35:30 UTC
Created attachment 172478 [details]
Screenshot of the problem
Comment 4 Commit Notification 2021-05-31 09:43:58 UTC
Attila Bakos (NISZ) committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8acc6bc43e0334157b97b36f570987a49c5febdd

tdf#142537 PPTX export: fix placeholder style export

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.